<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/padding_default"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <EditText
                android:id="@+id/login_username"
                style="@style/BaseInput"
                android:hint="@string/login_username"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/login_password" />

            <EditText
                android:id="@+id/login_password"
                style="@style/BaseInput"
                android:layout_marginTop="@dimen/padding_small"
                android:hint="@string/login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/login_trainer_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/login_im_trainer" />

            <Button
                android:id="@+id/login_login"
                style="@style/BaseButton"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/login_login" />

            <Button
                android:id="@+id/login_register"
                style="@style/BaseButton"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/login_register" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>